# norwegian-parliament-author-attribution

./: CITATION.bib  LICENSE  README.md  pyproject.toml  requirements.txt  run_data_pipeline.py  run_feature_importance.py  run_phase1a_pipeline.py  run_phase1b_pipeline.py  run_phase2_pipeline.py  run_phase3a_oracle_pipeline.py  run_phase3a_pipeline.py  run_phase3b_oracle_pipeline.py  run_phase3b_pipeline.py
data/: README.md
data_pipeline/: 00_preprocessing.ipynb  README.md  dataset_stats.py  preprocessing.py  reporting.py  utils.py
models/: README.md
pipelines/: README.md  __init__.py  runner_cli.py  tracks.py
scripts/: README.md  build_results_additions.py  build_results_additions_feature_importance.py  plot_authorwise_training_timeline.py  plot_temporal_training_timeline.py  report_profiling_fold_balance.py  run_significance_tests.py
tests/: test_attribution_diagnostics.py  test_attribution_stages.py  test_authorwise_splits.py  test_build_results_additions.py  test_build_results_additions_feature_importance.py  test_feature_extraction.py  test_feature_importance.py  test_materialization.py  test_pipeline_tracks.py  test_preprocessing.py  test_profiling_split.py  test_profiling_transfer_diagnostics.py  test_report_profiling_fold_balance.py  test_run_significance_tests.py  test_split_creation_entrypoints.py  test_stacked_attribution.py  test_stylometry_audit.py  test_temporal_splits.py  test_train_attribution.py  test_train_profiling_classifiers.py
thesis_reporting/: __init__.py  artifacts.py  author_performance.py  config.py  confusions.py  fold_balance.py  (+6 more)
(+105 files in other folders)
